--- a/adapter/in-web/pom.xml
+++ b/adapter/in-web/pom.xml
@@ -10,7 +10,12 @@
     <groupId>com.wuyunbin</groupId>
     <artifactId>in-web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <name>in-web</name>
+    <description>in-web</description>
 
+    <properties>
+        <java.version>25</java.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -18,15 +23,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.wuyunbin</groupId>
-            <artifactId>application</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webmvc-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.wuyunbin</groupId>
+            <artifactId>application</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
