--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -11,26 +11,26 @@
 	<groupId>com.wuyunbin</groupId>
 	<artifactId>bootstrap</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<name>bootstrap</name>
+	<description>bootstrap</description>
 
 	<properties>
 		<java.version>25</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-
-		<dependency>
 			<groupId>com.wuyunbin</groupId>
 			<artifactId>in-web</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.wuyunbin</groupId>
 			<artifactId>out-persistence</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
